# Simon-game-Raspberry-Pico

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  simon.c
